--- a/style.css
+++ b/style.css
@@ -27,6 +27,15 @@
     color: #fff;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    overflow-x: hidden;
+}
+
 #crsr {
     height: 2.8vw;
     width: 2.8vw;
@@ -36,11 +45,6 @@
     z-index: 9999;
     mix-blend-mode: difference;
     transform: translate(-50%, -50%);
-}
-
-html, body {
-    width: 100%;
-    height: 100%;
 }
 
 #loader {
@@ -246,13 +250,77 @@ html, body {
     min-height: 100vh;
     width: 100%;
     background-color: #151515;
+    padding: 7vh 0;
 }
 
+#page4-content {
+    width: 72vw;
+    position: relative;
+    margin-left: 28%;
+}
 
+#page4-content h1 {
+    font-size: 7vw;
+    text-transform: uppercase;
+}
 
+#page4-content .underline {
+    height: 2px;
+    width: 100%;
+    background-color: #fff;
+    margin: 5vw 0; 
+}
 
+#page4-content >p {
+    font-size: 2.05vw;
+    width: 50%;
+    margin-bottom: 3vw;
+}
 
+#page4-flex {
+    display: flex;
+}
 
+#page4-flex img {
+    width: 48%;
+}
 
+#page4-flex p {
+    font-size: 0.9vw;
+    width: 19%;
+    margin-left: 1vw;
+}
 
+#page4-blue-div {
+    background-color: #3f7df4;
+    width: 33vw;
+    padding: 3vw;
+    position: relative;
+    margin-top: -33vh;
+    margin-left: 26vw;
+}
+
+.blue-div-elem {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 1.7vw 0;
+    border-bottom: 2px solid #ffffff94;
+}
+
+.blue-div-elem h4 {
+    font-size: 1.4vw;
+    font-weight: 500;
+}
+
+.blue-div-elem p {
+    width: 50%;
+    font-size: 0.7vw;
+}
+
+#page5 {
+    min-height: 100vh;
+    width: 100%;
+    /* padding: 5vw 0; */
+}
 
