--- a/style.css
+++ b/style.css
@@ -181,6 +181,16 @@ body {
     position: relative;
 }
 
+#hero1::before {
+    content: "01";
+    position: absolute;
+    font-size: 3vw;
+    font-weight: 100;
+    font-family: "silk serif";
+    left: -20%;
+    top: 29%;
+}
+
 .hero h2 {
     font-size: 7.2vw;
     font-weight: 600;
@@ -224,12 +234,12 @@ body {
 
 #video-cursor {
     background-color: #ffa63d;
-    height: 8.5vw;
-    width: 8.5vw;
+    height: 9vw;
+    width: 9vw;
     border-radius: 50%;
     position: absolute;
-    top: -10;
-    right: 80%;
+    top: -15;
+    left: 70%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -264,6 +274,15 @@ body {
     font-size: 7vw;
     text-transform: uppercase;
     position: relative;
+}
+
+#page4-content h1::before {
+    content: "03";
+    position: absolute;
+    font-size: 3vw;
+    font-family: "silk serif";
+    left: -12%;
+    top: 8%;
 }
 
 #page4-content .underline {
@@ -351,7 +370,99 @@ body {
         transform: translateX(0);
     }
     to {
-        transform: translate3d(calc(-100% - 20px));
+        transform: translateX(calc(-100% - 20px));
     }
 }
 
+.elem2 {
+    white-space: nowrap;
+    overflow-x: hidden;
+    margin-bottom: -2vw;
+}
+
+.elem2 h1 {
+    font-size: 7vw;
+    -webkit-text-stroke: 1px #fff;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: transparent;
+    display: inline-block;
+    transform: translateX(calc(-100% - 20px));
+    animation-name: anime;
+    animation-duration: 18s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: reverse;
+}
+
+.elem span {
+    font-style: italic;
+    font-family: "silk serif";
+    color: transparent;
+}
+
+.elem2 span {
+    font-style: italic;
+    font-family: "silk serif";
+    color: transparent;
+}
+
+#footer {
+    height: 85vh;
+    width: 100%;
+    position: relative;
+    padding-left: 28vw;
+    margin-top: 5vw;
+    padding-right: 2vw;
+}
+
+#footer h1 {
+    font-size: 7.2vw;
+    text-transform: uppercase;
+    position: relative;
+}
+
+#footer h1::before {
+    content: "04";
+    position: absolute;
+    font-size: 3vw;
+    font-family: "silk serif";
+    left: -13%;
+    top: 6%;
+}
+
+.underline {
+    height: 1px;
+    width: 100%;
+    background-color: #fff;
+    margin: 3vw 0;
+}
+
+#footer-div {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-right: 15vw;
+    padding-top: 4vw;
+    margin-bottom: 6vw;
+}
+
+.box {
+    width: 20%;
+}
+
+#footer-div h6 {
+    font-size: 0.9vw;
+    margin-bottom: 1.5vw;
+    font-weight: 500;
+}
+
+#footer-div h5 {
+    font-size: 1.4vw;
+    font-weight: 500;
+}
+
+#footer > h5 {
+    font-weight: 500;
+    font-size: 1vw;
+}
