--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
 * {
     margin: 0;
     padding: 0;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     font-family: 'Plain Light';
     color: #fff;
@@ -36,15 +35,11 @@ body {
     overflow-x: hidden;
 }
 
-#crsr {
-    height: 2.8vw;
-    width: 2.8vw;
-    border-radius: 50%;
-    border: 1px solid #fff;
-    position: fixed;
-    z-index: 9999;
+.mousefollower {
+    border: 2px solid #fff;
+    background-color: rgb(255, 255, 255);
+    scale: 2;
     mix-blend-mode: difference;
-    transform: translate(-50%, -50%);
 }
 
 #loader {
@@ -135,10 +130,13 @@ body {
     z-index: 99;
 }
 
+
 #page1 {
     height: 100vh;
     width: 100%;
     background-color: #151515;
+    position: relative;
+    z-index: 100;
 }
 
 #page1 #nav {
@@ -187,7 +185,7 @@ body {
     font-size: 3vw;
     font-weight: 100;
     font-family: "silk serif";
-    left: -20%;
+    left: 20%;
     top: 29%;
 }
 
@@ -207,6 +205,7 @@ body {
     font-weight: 500;
     border-bottom: 0.5 solid #ffffff00;
 }
+
 
 #page2 {
     height: 100vh;
@@ -250,12 +249,15 @@ body {
     font-size: 2vw;
 }
 
+
 #page3 {
     min-height: 100vh;
     width: 100%;
     background-color: #151515;
+    position: relative;
     padding: 17vh 2vw;
     margin-bottom: 20vh;
+    margin-top: 20vh;
 }
 
 #page3 h1 {
@@ -269,6 +271,7 @@ body {
     content: "02";
     position: absolute;
     font-size: 3vw;
+    font-weight: 100;
     font-family: "silk serif";
     left: -12%;
     top: 8%;
@@ -285,16 +288,15 @@ body {
     align-items: flex-start;
     justify-content: flex-start;
     flex-wrap: wrap;
-    flex-shrink: 0;
 }
 
 .image-div {
-    height: 38vw;
-    width: 25vw;
+    height: 42vw;
+    width: 31vw;
     position: relative;
     overflow: hidden;
     flex-shrink: 0;
-    margin: 2vw 0;
+    margin: 1vw;
 }
 
 .image-div:nth-child(1) {
@@ -316,14 +318,80 @@ body {
     border-radius: 50%;
     margin-top: 23vh;
     margin-left: 10vw;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
 }
 
 .page3-circle1 svg {
     height: 30%;
 }
+
+.page3-circle2 {
+    height: 23vw;
+    width: 23vw;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    margin-top: 2vw;
+    margin-right: 3vw;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.page3-circle2 svg {
+    height: 30%;
+    rotate: -45deg;
+}
+
+.circle-in {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all ease 0.5s;
+    scale: 0;
+    border-radius: 50%;
+}
+
+.circle-in p {
+    font-size: 0.95vw;
+    color: #000;
+    font-weight: 500;
+    width: 60%;
+    scale: 0;
+    transition: all ease 0.5s;
+    transition-delay: 0.3s;
+    opacity: 0;
+}
+
+.page3-circle1:hover .circle-in {
+    scale: 1;
+}
+
+.page3-circle1:hover p {
+    scale: 1;
+    opacity: 1;
+}
+
+.page3-circle2:hover .circle-in {
+    scale: 1;
+}
+
+.page3-circle2:hover p {
+    scale: 1;
+    opacity: 1;
+}
+
 
 #page4 {
     min-height: 100vh;
@@ -349,6 +417,7 @@ body {
     content: "03";
     position: absolute;
     font-size: 3vw;
+    font-weight: 100;
     font-family: "silk serif";
     left: -12%;
     top: 8%;
@@ -476,6 +545,7 @@ body {
     color: transparent;
 }
 
+
 #footer {
     height: 85vh;
     width: 100%;
@@ -491,14 +561,45 @@ body {
     position: relative;
 }
 
-#footer h1::before {
+#footer-text {
+    position: relative;
+}
+
+#footer-text h2 {
+    font-size: 7.2vw;
+    text-transform: uppercase;
+    position: absolute;
+    top: -10%;
+    font-weight: 500;
+    left: 0;
+    font-family: "silk serif";
+}
+
+#footer-text h2 span {
+    font-family: "silk serif";
+    opacity: 0;
+    -webkit-text-stroke: 1px #fff;
+    color: transparent;
+}
+
+#footer-text::before {
+    content: "04";
+    position: absolute;
+    font-size: 3vw;
+    font-weight: 100;
+    font-family: "silk serif";
+    left: -13%;
+    top: 6%;
+}
+
+/* #footer h1::before {
     content: "04";
     position: absolute;
     font-size: 3vw;
     font-family: "silk serif";
     left: -13%;
     top: 6%;
-}
+} */
 
 .underline {
     height: 1px;
@@ -536,14 +637,25 @@ body {
     font-size: 1vw;
 }
 
+
 .canvas_container {
     z-index: 999999 !important;
     pointer-events: none;
 }
 
 
+#flag {
+    height: 25vw;
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+}
 
-
-
+#hero3 {
+    z-index: 999;
+    position: relative;
+}
 
 
